cf_analysis_results/checkerframework_3.42.0_results_WPI/url1f1de5fc71_cooijmanstim_hobo_tgz-pJ8-hobo_TestingEnviromentJ8.txt
../dataset/june2020_dataset/url1f1de5fc71_cooijmanstim_hobo_tgz-pJ8-hobo_TestingEnviromentJ8/src/hobo/FileHandler.java:15: error: (required.method.not.called) $$ 4 $$ method close $$ new FileWriter(file) $$ java.io.FileWriter $$ regular method exit $$ ( 257, 277 ) $$ @MustCall method close may not have been invoked on new FileWriter(file) or any of its aliases.
			fileWriter = new FileWriter(file);
			             ^
  The type of object is: java.io.FileWriter.
  Reason for going out of scope: regular method exit
Note: ../dataset/june2020_dataset/url1f1de5fc71_cooijmanstim_hobo_tgz-pJ8-hobo_TestingEnviromentJ8/src/hobo/graphics/MissionChooserFrame.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error
